--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -7,7 +7,7 @@ header {
     justify-content: space-between;
     padding: 0.5rem 1rem;
     height: 65px;
-    background-color: $bgColorlight;
+    background-color: $bgColorLight;
     margin: 0;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 
