--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,5 @@
-<slider [items]="movies"></slider>
+<slider [items]="popularMovies"></slider>
+<items-banner></items-banner>
+<items-banner></items-banner>
+<items-banner></items-banner>
 <!-- <pre>{{ movies | json }}</pre> -->
