--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,11 @@ a {
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+
+.container {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  // margin-right: 1 rem;
+  // margin-left: 1 rem;
+  // margin-top: 1 rem;
+}
