--- a/src/app/components/item/item.component.scss
+++ b/src/app/components/item/item.component.scss
@@ -1,8 +1,9 @@
 @import '../../../styles/colors';
 
-.movie-item {
+.item {
+  position: relative;
   display: block;
-  min-height: 300px;
+  min-height: 425px;
   border-radius: 5px;
   background-color: $bgColorLight;
   border: 1px solid $lightGray;
@@ -11,7 +12,7 @@
     img {
       width: 100%;
       border-radius: 5px;
-      height: 275px;
+      height: 375px;
       object-fit: cover;
     }
   }
@@ -31,8 +32,12 @@
       color: #d4af37;
     }
   }
+
   &-title {
+    display: flex;
+    align-items: center;
     font-weight: bold;
-    margin: 0.5 rem;
+    margin: 0.5rem;
+    height: 30px;
   }
 }
