--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,4 @@
 <slider [items]="popularMovies"></slider>
-<items-banner></items-banner>
-<items-banner></items-banner>
-<items-banner></items-banner>
-<!-- <pre>{{ movies | json }}</pre> -->
+<items-banner [items]="upcomingMovies" title="Upcoming Movies"></items-banner>
+<items-banner [items]="topRatedMovies" title="Top Rated Movies"></items-banner>
+<items-banner [items]="popularTvShows" title="Popular Tv Shows"></items-banner>
